# lottery-v1

./: README.md  brownie-config.yml  pyproject.toml
contracts/: Lottery.sol  lottery.vy  lottery.vy.py
scripts/: deploy_lottery.py
tests/: test_lottery.py
